--- a/Family Feud-style game/styles.css
+++ b/Family Feud-style game/styles.css
@@ -1,276 +1,413 @@
-/* Universal Reset */
-* {
-    margin: 0;
-    padding: 0;
+
+html {
+    height: 100%;
+    width: 100%;  
+  }
+  
+  body {
+    background: #a7cfdf;
+    background: -moz-linear-gradient(top, #a7cfdf 0%, #23538a 100%);
+    background: -webkit-linear-gradient(top, #a7cfdf 0%, #23538a 100%);
+    background: linear-gradient(to bottom, #a7cfdf 0%, #23538a 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#a7cfdf', endColorstr='#23538a', GradientType=0);
+    padding: 25px;
+    height: 100%;
+    width: 100%;
     box-sizing: border-box;
-    font-family: 'Arial', sans-serif;
-}
-
-/* Body Styling */
-body {
-    background-color: #f0f8ff;
-}
-
-/* Navbar Styling */
-.navbar {
-    background-color: #007bff;
-}
-
-.navbar-brand {
-    color: #000 !important;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-
-.nav-link {
-    color: #000 !important;
-    font-weight: 600;
-}
-
-.navbar-nav .nav-link:hover {
-    color: #ffc107 !important;
-}
-
-/* Header Styling */
-#game-header {
-    background: linear-gradient(135deg, #007bff, #0056b3);
+  }
+  
+  .gameBoard .cardHolder>div,
+  .gameBoard .LBG {
+    background: #cedbe9;
+    background: -moz-linear-gradient(top, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
+    background: -webkit-linear-gradient(top, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
+    background: linear-gradient(to bottom, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#cedbe9', endColorstr='#26558b', GradientType=0);
+  }
+  
+  .gameBoard .cardHolder>div:empty,
+  .gameBoard .score,
+  .gameBoard .button,
+  .gameBoard .DBG {
+    background: #7db9e8;
+    background: -moz-linear-gradient(top, #7db9e8 0%, #207cca 49%, #2989d8 50%, #1e5799 100%);
+    background: -webkit-linear-gradient(top, #7db9e8 0%, #207cca 49%, #2989d8 50%, #1e5799 100%);
+    background: linear-gradient(to bottom, #7db9e8 0%, #207cca 49%, #2989d8 50%, #1e5799 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#1e5799', GradientType=0);
+  }
+  
+  .gameBoard {
+    position: relative;
+    font-family: helvetica, sans-serif;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 1);
+    border: 5px solid #003c7b;
     text-align: center;
-    padding: 2rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-#game-header h1 {
-    font-size: 2.5rem;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 2px;
-}
-
-/* Game Container */
-#game-container {
-    padding: 3rem;
-    margin: 20px auto;
+    padding: 150px;
+    border-radius: 50%;
     max-width: 1000px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-}
-
-/* Game Content */
-h2 {
-    margin-top: 1em;
-    font-size: 1.8rem;
-    color: #333;
-    margin-bottom: 15px;
+    max-height: 800px;
+    min-width: 305px;
+    margin: auto;
+    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/40041/bgFF.svg') #0C4779;
+    /*background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/40041/bgFF.svg') #3a84c3;*/
+    background-repeat: repeat;
+    background-position: center center;
+    -webkit-box-shadow: 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+    -moz-box-shadow: 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+    box-shadow: 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+  }
+  
+  .gameBoard .score {
+    position: absolute;
     text-align: center;
-}
-
-.row p {
-    text-align: justify;
-}
-
-p, li {
-    font-size: 1.1rem;
-    color: #555;
-}
-
-.row {
+    margin: auto;
+    font-size: 45px;
+    height: 50px;
+    line-height: 50px;
+    width: 75px;
+    padding: 20px;
+    border: 2px solid white;
+    -webkit-box-shadow: inset 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+    -moz-box-shadow: inset 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+    box-shadow: inset 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+  }
+  .gameBoard .score#boardScore {
+    height: 75px;
+    line-height: 75px;
+    width: 125px;
+    font-size: 65px;
+    left: 0;
+    right: 0;
+    top: 20px;
+  }
+  .gameBoard .score#team1 {
+    left: 10px;
+    top: 0;
+    bottom: 0;
+  }
+  .gameBoard .score#team2 {
+    right: 10px;
+    top: 0;
+    bottom: 0;
+  }
+  
+  .gameBoard .questionHolder {
+    width: 94%;
+    margin: auto;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    font-size: 30px;
+    color: #003c7b;
+    text-shadow: initial;
+    text-align: center;
+    border: 1px solid black;
+    background: #deeeff;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid black;
+    -webkit-box-shadow: inset 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+    -moz-box-shadow: inset 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+    box-shadow: inset 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+  }
+  .gameBoard .questionHolder span {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+  }
+  
+  .gameBoard .colHolder {
+    background: black;
+    padding: 4px;
+  }
+  .gameBoard .colHolder>div {
+    display: block;
+    width:100%;
+    -webkit-box-shadow: 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+    -moz-box-shadow: 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+    box-shadow: 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+  }
+  .gameBoard .cardHolder {
+    display: inline-block;
+    position: relative;
+    vertical-align: top;
+    height: 50px;
+    margin: 4px;
+    width: 95%;
+    background: black;
+    border: 4px solid white;
+  }
+  .gameBoard .cardHolder:not(.empty){
+    cursor: pointer;
+  }
+  .gameBoard .cardHolder b {
+    position: absolute;
+    right: 0;
+    width: 45px;
+    text-align: center;
+    border-left: 2px solid #003c7b;
+  }
+  .gameBoard .cardHolder span {
+    margin: 10px;
+  }
+  .gameBoard .cardHolder>div {
+    top: -2px;
+    left: -2px;
+    margin: 0px;
+    padding: 0px;
+    position: absolute;
+    width: 100%;
+    line-height: 100%;
+    height: 100%;
+    border: 2px solid #003c7b;
+    line-height: 50px;
+  }
+  .gameBoard .cardHolder .back {
+    font-size: 25px;
+    text-align: left;
+    height: 50px;
+    line-height: 50px;
+  }
+  .gameBoard .cardHolder .back span {
+    text-align: left;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+  }
+  .gameBoard .cardHolder .front {
+    text-align: center;
+  }
+  .gameBoard .cardHolder .front span {
+    font-size: 30px;
+    position: absolute;
+    border-radius: 50%;
+    line-height: 35px;
+    height: 35px;
+    width: 45px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: block;
+    margin: auto;
+    border: 2px solid #003c7b;
+  }
+  
+  .gameBoard .btnHolder{
+    position: absolute;
+    margin: auto;
+    left:0;
+    right:0;
+    bottom:45px
+  }
+  .gameBoard .btnHolder .button{
+    cursor: pointer;
+    display:inline-block;
+    font-size: 20px;
+    margin:10px;
+    height:50px;
+    line-height:50px;
+    width:175px;
+    border:3px solid white;
+    -webkit-box-shadow: 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+    -moz-box-shadow: 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+    box-shadow: 0 1px 24px 1px rgba(0, 0, 0, 0.48);
+  }
+  .gameBoard .btnHolder .button#awardTeam1{
+    border-radius: 50px 0 0 50px;
+  }
+  .gameBoard .btnHolder .button#awardTeam2{
+    border-radius: 0 50px 50px 0;
+  }
+  
+  @media screen and (min-width: 780px) {
+    .gameBoard .colHolder>div{
+      display: inline-block;
+      width:50%;
+    }
+  }
+  
+  .modal {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centers the items horizontally */
-}
-
-.row li {
-    border: 1px solid black;
-    padding: 2em;
-    text-align: center;
-}
-
-/* Answer Form */
-#answer-input-form {
-    margin-top: 20px;
-}
-
-#answer-input {
-    flex: 1;
-    margin-right: 10px; /* Space between input and button */
-}
-
-#submit-answer {
-    background-color: #28a745;
-    color: #fff;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
-
-#submit-answer:hover {
-    background-color: #218838;
-}
-
-/* Player Names Form */
-form .form-control {
-    border-radius: 5px;
-    margin-bottom: 15px;
-}
-
-form label {
-    font-weight: 600;
-}
-
-/* Flexbox for Game Controls */
-.team-controls {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between; /* Evenly space buttons */
-}
-
-#pass-btn, #play-btn {
-    padding: 10px 20px;
-    font-size: 1.2rem;
-    border-radius: 50px;
-    font-weight: bold;
-    background-color: #007bff;
-    color: #fff;
-    transition: background-color 0.3s ease;
-}
-
-#pass-btn:hover, #play-btn:hover {
-    background-color: #0056b3;
-}
-
-/* Timer and Buzzer */
-progress {
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 20px;
-    border-radius: 10px;
-    background-color: #e9ecef;
-}
-
-progress::-webkit-progress-bar {
-    background-color: #e9ecef;
-}
-
-progress::-webkit-progress-value {
-    background-color: #007bff;
-}
-
-img {
-    width: 50px;
-    max-width: 100px;
-    align-self: center;
-}
-
-/* Score Table Styling */
-.score-table {
-    margin-top: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    font-size: 1.2rem;
-}
-
-.score-table th {
-    background-color: #343a40;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
     color: white;
+    z-index: 1000;
 }
 
-tbody td {
+.modal input {
+    margin: 10px;
+    padding: 10px;
+    width: 80%;
+}
+
+.modal button {
+    padding: 10px 20px;
+    background: #2196F3;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.modal button:hover {
+    background: #0b7dda;
+}
+
+.gameBoard {
+    position: relative;
+    width: 100%;  /* Adjust according to your layout */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.teamName {
+    position: absolute;
+    top: 20%; /* Adjust to position vertically */
+    font-size: 24px; /* Adjust font size */
     font-weight: bold;
 }
 
-/* Results Section Styling */
-#results {
-    background-color: #ffcc00;
-    padding: 2rem;
-    margin-top: 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+#name1 {
+    top: 60%;
+    left: 4%; /* Position on the left */
 }
 
-#results h2 {
-    font-size: 1.8rem;
-    color: #333;
-    font-weight: bold;
+#name2 {
+    top: 60%;
+    right: 3%; /* Position on the right */
 }
 
-#answer-list {
-    list-style: none;
+/* Styling for input section */
+.nameInputSection {
+    text-align: center;
+    margin: 20px;
 }
 
-#answer-list li {
-    font-size: 1.3rem;
-    color: #333;
+.nameInputSection h2 {
     margin-bottom: 10px;
 }
 
-/* Start Game Button */
-#start-game-btn {
-    margin-top: 30px;
-    padding: 15px 30px;
-    background-color: #007bff;
-    color: #fff;
-    font-size: 1.2rem;
-    font-weight: bold;
-    border-radius: 50px;
-    transition: background-color 0.3s ease;
+.nameInputSection input {
+    margin: 5px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
-#start-game-btn:hover {
+.nameInputSection button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: #007BFF;
+    color: white;
+    cursor: pointer;
+}
+
+.nameInputSection button:hover {
     background-color: #0056b3;
 }
 
-/* Background Music */
-audio {
-    width: 100%;
+/* Positioning team names on each side */
+.teamName {
+    position: absolute;
+    top: 20px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.teamName.left {
+    left: 20px;
+}
+
+.teamName.right {
+    right: 20px;
+}
+
+.answerInputHolder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 20px;
-}
-
-/* Footer Section */
-footer {
-    background-color: #007bff;
-    color: #fff;
-    padding: 1.5rem;
-    margin-top: 30px;
-    border-radius: 0 0 10px 10px;
-}
-
-footer h3 {
-    font-size: 1.8rem;
+    gap: 10px;
     margin-bottom: 10px;
 }
 
-footer p {
-    font-size: 1.1rem;
+#userAnswer {
+    width: 300px;
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid #333;
+    border-radius: 8px;
+    outline: none;
+    transition: border-color 0.3s ease-in-out;
 }
 
-/* Responsive Design */
-@media (max-width: 768px) {
-    #game-header h1 {
-        font-size: 2rem;
-    }
+#userAnswer:focus {
+    border-color: #007bff; /* Blue border on focus */
+}
 
-    h2 {
-        font-size: 1.5rem;
-    }
+#submitAnswer {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
 
-    p, li {
-        font-size: 1rem;
-    }
+#submitAnswer:hover {
+    background-color: #0056b3; /* Darker blue on hover */
+}
 
-    #answer-input {
-        width: 100%;
-    }
+.turnIndicator {
+    font-size: 18px;
+    margin-top: 10px;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 10px;
+}
 
-    .team-controls {
-        flex-direction: column; /* Stack buttons vertically */
-        width: 100%;
-    }
+#currentTeam {
+    color: #007bff; /* Blue color for team name */
+}
 
-    #pass-btn, #play-btn {
-        width: 100%; /* Full width buttons */
-        margin-bottom: 10px; /* Space between buttons */
-    }
 
-    img {
-        max-width: 80px;
-    }
+.strikesContainer {
+    display: flex;
+    justify-content: space-between; /* Distribute space between items */
+    align-items: center; /* Align items vertically in the center */
+    margin-top: 10px; /* Add some spacing above */
+}
+
+#team1Strikes {
+    color: red;
+    font-size: 1.5rem;
+    position: absolute;
+    left: -100px;
+}
+
+#team2Strikes {
+    color: red;
+    font-size: 1.5rem;
+    position: absolute;
+    right: -100px;
+}
+
+.strikes {
+    font-size: 16px; /* Set a suitable font size */
 }
